--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,34 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+// Barcode Scanner Modal Styles
+.barcode-scanner-modal {
+  --background: transparent;
+  --backdrop-opacity: 0;
+
+  ion-content {
+    --background: transparent;
+  }
+
+  ion-header {
+    --background: rgba(0, 0, 0, 0.8);
+    --color: #fff;
+  }
+
+  ion-toolbar {
+    --background: rgba(0, 0, 0, 0.8);
+    --color: #fff;
+  }
+}
+
+// Ensure modal takes full screen
+.barcode-scanner-modal .modal-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
